feat: add delete ship fix: storage tank color and card height

--- a/src/components/screens/ships/ships.module.scss
+++ b/src/components/screens/ships/ships.module.scss
@@ -28,8 +28,14 @@ $black: #282936;
     display: flex;
     align-items: flex-start;
     gap: 30px;
-  }
 
+    .desc {
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
+  }
 
 
   .main {
