--- a/src/components/screens/ships/ships.module.scss
+++ b/src/components/screens/ships/ships.module.scss
@@ -137,7 +137,7 @@ $black: #282936;
 
 .charts {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
